--- a/notebooks/expansion-terms.ipynb
+++ b/notebooks/expansion-terms.ipynb
@@ -1,15 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notebook for getting top-k embedding expansion terms for Kuzi centroid method."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import Dict, List, Tuple\n",
-    "\n",
-    "import numpy as np\n",
-    "\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def load_embeddings(path: str) -> Tuple[Dict[str, int], List[str], np.ndarray]:\n",
     "    vocab = []\n",
     "    lookup = {}\n",
@@ -25,14 +39,22 @@
     "            ind += 1\n",
     "            vecs.append(np.array(split_line[1:], dtype=np.float64))\n",
     "        \n",
-    "    return lookup, vocab, np.asarray(vecs, dtype=np.float64) \n",
-    "\n",
-    "lookup, vocab, embs = load_embeddings('/home/danlocke/fastText/filtered-100d.vec')"
+    "    return lookup, vocab, np.asarray(vecs, dtype=np.float64) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emb_path = '../embeddings/filtered-100d.vec'\n",
+    "lookup, vocab, embs = load_embeddings(emb_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,20 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(100,)"
-      ]
-     },
-     "execution_count": 133,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_embedding(term: str, lookup: Dict[str, int], embs: np.ndarray) -> np.ndarray:\n",
     "    if term not in lookup:\n",
@@ -69,16 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics.pairwise import cosine_similarity"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,121 +95,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "764 damage\n",
-      "32775 overcompensation\n",
-      "3692 defamation\n",
-      "46452 humiliations\n",
-      "3237 emotional\n",
-      "27856 defamations\n",
-      "57591 distresses\n",
-      "59536 insolation\n",
-      "27618 defaming\n",
-      "4460 compensate\n",
-      "14927 anguish\n",
-      "11564 reputational\n",
-      "34148 indignities\n",
-      "7704 humiliation\n",
-      "5053 feelings\n",
-      "415 damages\n",
-      "37343 compensatable\n",
-      "38347 compensations\n",
-      "21439 consolation\n",
-      "4018 distress\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print_top(centroid, embs, vocab)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.0\n",
-      "3647 recoverable\n",
-      "3692 defamation\n",
-      "2210 quantum\n",
-      "32659 Compensatory\n",
-      "10486 meruit\n",
-      "50111 overcompensatory\n",
-      "10116 restitutionary\n",
-      "38347 compensations\n",
-      "4909 liquidated\n",
-      "22103 Exemplary\n",
-      "10095 unliquidated\n",
-      "37343 compensatable\n",
-      "727 compensation\n",
-      "1974 awarded\n",
-      "57671 compensator\n",
-      "5309 exemplary\n",
-      "5875 compensatory\n",
-      "8426 Damages\n",
-      "43867 amages\n",
-      "415 damages\n"
-     ]
-    }
-   ],
-   "source": [
-    "print_top(get_embedding('damages', lookup, embs), embs, vocab, sim=415)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'automate'"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vocab[35202]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "415"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print_top(get_embedding('damages', lookup, embs), embs, vocab, sim=415)"
+   ]
   }
  ],
  "metadata": {
