--- a/notebooks/legislation-matching.ipynb
+++ b/notebooks/legislation-matching.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook generates links between legislative provisions. I have not shared these pieces of legislation. However, in the features folder, one can find the generated link files. Legislation was parsed to a json format to be read by the code in this notebook."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
@@ -15,7 +22,7 @@
     "\n",
     "from scipy.sparse.csr import csr_matrix\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.metrics.pairwise import linear_kernel, cosine_similarity"
+    "from sklearn.metrics.pairwise import cosine_similarity"
    ]
   },
   {
@@ -661,174 +668,6 @@
     "with open('comm_curr_links.json', 'w') as f:\n",
     "    json.dump(lt_curr_links, f, indent=4)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# file_names = ['lt_links', 'lt_curr_links', 'lt_rep_links']\n",
-    "# datas = [lt_links, lt_curr_links, lt_rep_link]\n",
-    "# for i, f_name in enumerate(file_names):\n",
-    "#     with open(f_name+'.json', 'w') as f:\n",
-    "#         json.dump(datas[i], f, indent=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('/home/danlocke/go/src/github.com/dan-locke/phd-data/case-topics.json', 'rb') as f:\n",
-    "    data = json.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "What is the effect of reinstating a company that was in liquidation as regards money that may be recovered?\n",
-      "Is the variation of the date for settlement required to be in writing?\n",
-      "Maintenance and champerty and the requisite degree of control\n",
-      "agency fees and effective cause of sale of a boat\n",
-      "Should damages be reduced according to a sum that represents betterment\n",
-      "Consideration of a clause that provides that the contract is subject to the buyer being satisfied, in its absolute discretion, with the due diligence by a date\n",
-      "Maintenance and champerty\n",
-      "proportionality as a basis for striking out a defamation claim\n",
-      "In trade or commerce\n",
-      "Whether membership of an organisation is in trade or commerce\n",
-      "Organisations owing members a duty of care\n",
-      "That proprietary relief is only available after rescission \n",
-      "Exemplary damages and retaining the benefit of any brokerage being a basis for their assessment\n",
-      "Google search results and defamation\n",
-      "Postponing the giving of particulars of a claim until after discovery\n",
-      "Bare trustee duties\n",
-      "Valuation of future losses with limited evidence\n",
-      "Business profitability as a basis for assessing damages\n",
-      "Administrative decision making and the Briginshaw standard of proof\n",
-      "Common intention constructive trusts\n",
-      "Restitutionary relief and entitlement to a benefit\n",
-      "Interlocutory applications and res judicatums\n",
-      "whether future profit on resale are to be brought to bear on a question of loss of opportunity\n",
-      "Whether limitation periods are substantive law for the purpose of a conflict of laws\n",
-      "Whether in a common intention constructive trust the intention must be a continuing one\n",
-      "Stay of a QCAT order revoking a license\n",
-      "The appropriate test for severance of a joint tenancy\n",
-      "Severance of a joint tenancy by conduct by means of discussions and agreements to sell property held as joint tenants\n",
-      "Damages for defamation compensate for, amongst other things, emotional distress\n",
-      "omission of equal in dispositive clause providing for division of property in a will\n",
-      "Liability under contract for breach where performance is subcontracted\n",
-      "equitable jurisidiction to set aside a perfected judgment in criminal case on the basis of fraud\n",
-      "Admission of fresh or new evidence\n",
-      "Obligation of prosecution to investigate as distinct from the obligation to disclose\n",
-      "Whether incompetence of trial counsel is a basis for a criminal appeal\n",
-      "Relevant considerations for an application for summary judgment in the Federal Court\n",
-      "Recovery of costs in estate litigation matters\n",
-      "Right of first refusal and restraints on alienation\n",
-      "Causation and evidentiary standards\n",
-      "Expectation losses and misleading or deceptive conduct\n",
-      "Redaction of documents for disclosure\n",
-      "Hypothetical nature of declarations\n",
-      "Nunc pro tunc\n",
-      "motor vehicle accidents involving caravans\n",
-      "contributory negligence in motor vehicle accident cases\n",
-      "amending pleadings after trial date set down\n",
-      "set off and suspension clauses\n",
-      "Non party costs against a party's solicitor\n",
-      "surrender of an easement\n",
-      "Whether a settlement agreement between a company and some of its directors, binds all directors\n",
-      "the need to show mismanagement to get damages when pleading breach of fiduciary duties and the remedies available\n",
-      "Causation and reliance\n",
-      "judicial review and unreasonableness / intelligible justification\n",
-      "Sale of land and entitlement of vendor to specific performance\n",
-      "Issues with duty to other party where procuring report\n",
-      "Malicious prosecution and witness immunity from suit\n",
-      "Ex debito justitiae\n",
-      "security for costs and delay\n",
-      "success in seeking security for costs where there has been a delay\n",
-      "whether administration validly entered into or entered into under improper purpose\n",
-      "Construction of broad definition clauses in professional indemnity insurance policies\n",
-      "meaning of dispute\n",
-      "meaning justiciable controversy\n",
-      "defintion of a mortgage\n",
-      "Discretion as to costs\n",
-      "where a document specifies the costs that a party may claim from another, is the Court bound to follow the document, or can it fix costs in its own discretion? \n",
-      "where a party may be subject to an indemnity costs order for their conduct, how does this intersect with a contractual entitlement to indemnity costs\n",
-      "Doctrine of ultimate effect\n",
-      "Meaning of transaction in the doctrine of ultimate effect\n",
-      "meaning of debt\n",
-      "Concurrent expert evidence\n",
-      "Contract and intention to create legal relations\n",
-      "Whether a presumption exists against the creation of legal relations in family relationships\n",
-      "liquidator impartiality\n",
-      "Litigation guardians\n",
-      "Removal of a litigation guardian\n",
-      "defamation pleading of publication and context\n",
-      "defamation republication\n",
-      "reasonableness of reliance for misleading or deceptive conduct\n",
-      "Equitable set off\n",
-      "stay of actions during bankruptcy\n",
-      "staying proceedings commenced by a person who subsequently becomes bankrupt\n",
-      "what amounts to a genuine commercial interest such that the assignment of a right to litigate is not a bare right to litigate\n",
-      "unclean hands and immediate and necessary connection\n",
-      "To what extent will a party’s participation in conduct of the other party that is the basis of the defence of unclean hands disentitle that party from relying upon the defence\n",
-      "Where a party in a without prejudice situation puts forward a situation that is different to the basis of their claim or defence can that contradictory situation be put to the witness\n",
-      "Where an insured settles a claim against it, what does it have to do to establish the settlement was reasonable in a third party claim against its insurer that denied the indemnity\n",
-      "Whether a subsequent offer letter not marked without prejudice is privileged as being without prejudice\n",
-      "can a party appeal a decision where they filed an appearance but took no active role in the proceedings\n",
-      "where a joint venture company has a receiver appointed pursuant to a security and other assets of the company would satisfy the security, can another funder seek access to an asset\n",
-      "injuries to children in foster care\n",
-      "is privilege waived by a client that seeks an order that their former laywer should pay costs?\n",
-      "the effect of death of a party on a cause of action and costs orders\n",
-      "motor vehicle accidents involving motorcycles\n",
-      "Sale of land specific performance and adequacy of damages\n"
-     ]
-    }
-   ],
-   "source": [
-    "for topic in data['topics']:\n",
-    "    print(topic['topic'])\n",
-    "#     tokens = tokenize(topic['topic'])\n",
-    "#     vec = vectorizer.transform([' '.join(tokens)])\n",
-    "#     sims = cosine_similarity(vec[0:1], currentDataHolder._text_vecs)[0]\n",
-    "#     sim_inds = sims.argsort()[:-10:-1]\n",
-    "#     for ind in sim_inds:\n",
-    "# #         if sims[ind] < 0.5: \n",
-    "# #             continue\n",
-    "#         currentDataHolder.print_row(ind)\n",
-    "#         print(sims[ind])\n",
-    "#     print('-'*30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# tokens = tokenize('Is the variation of the date for settlement required to be in writing?')\n",
-    "# vec = vectorizer.transform([' '.join(tokens)])\n",
-    "# rows = currentDataHolder.get_matching_rows_substr('act-1974-076')\n",
-    "# sims = cosine_similarity(vec, currentDataHolder._text_vecs[rows[0]:rows[-1]])[0]\n",
-    "# sim_inds = sims.argsort()[:-10:-1]\n",
-    "# for ind in sim_inds:\n",
-    "#     currentDataHolder.print_row(rows[0]+ind)\n",
-    "#     print(sims[ind])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
